--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="css/themes/default.css">
+        <link rel="stylesheet" href="css/themes/united.css">
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/lib/modernizr.js"></script>
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">CANLEARN</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -54,9 +54,11 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+      <div class="alert alert-success">bienvenido!!</div>
+      <div class="alert alert-danger">incorrecto</div>
+        <h1>BIENVENIDOS!</h1>
+        <p>Aca podras encontrar mas informacion a cerca del proyecto CANLEARN y todo lo que este contrae para una sociedad necesitada de un nuevo prototipo de educacion</p>
+        <p><a class="btn btn-primary btn-lg" role="button">Mas informacion&raquo;</a></p>
       </div>
     </div>
 
@@ -64,19 +66,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>QUE ES CANLEARN?</h2>
+          <p>Cada estudiante de un salón de 3° creará una cuenta en una aplicación web donde se incluirán las materias básicas del año electivo, apoyando el proceso de formación de los maestros, para que las clases sean mucho más didácticas para el alumno...</p>
+          <p><a class="btn btn-default" href="#" role="button">Detalles &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>QUE BUSCA EL PROYECTO?</h2>
+          <p>Buscamos que desde muy pequeños se les inculque a los niños una cultura de la tecnología que sea usada correctamente, para motivos de aprendizaje y estudio...</p>
+          <p><a class="btn btn-default" href="#" role="button">Detalles &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Detalles &raquo;</a></p>
         </div>
       </div>
 
